<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stat_title"
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="28dp"
        android:text="@string/title_stat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_message_stat"
        style="@style/error_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_player"
        android:layout_width="371dp"
        android:layout_height="159dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_player" />

    <TextView
        android:id="@+id/number_party_game"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="204dp"
        android:text="@string/number_party_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_average_time"
        android:layout_width="378dp"
        android:layout_height="139dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_party_game" />

    <Button
        android:id="@+id/recherche_button"
        android:layout_width="132dp"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:text="@string/recherche_button"
        app:layout_constraintStart_toEndOf="@+id/input_game_stat"
        app:layout_constraintTop_toBottomOf="@+id/stat_title" />

    <EditText
        android:id="@+id/input_game_stat"
        android:layout_width="223dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:hint="@string/input_game_stat"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stat_title" />

    <TextView
        android:id="@+id/list_player"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="392dp"
        android:text="@string/list_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>